--- a/install
+++ b/install
@@ -4,7 +4,6 @@ if [ "$#" -ne 3 ]; then
     echo "Usage: $0 <openrc> <tag> <ssh_key>"
     exit 1
 fi
-
 OPENRC=$1
 TAG=$2
 SSH_KEY=$3
@@ -12,25 +11,27 @@ SERVERS_FIP="servers_fip"
 
 # Function to check and install necessary dependencies
 install_dependencies() {
+    touch install.log
+    chmod 777 install.log
     echo "Checking and installing necessary dependencies..."
-    if ! command -v python3 &> /install.log; then
-        sudo apt update > /install.log
-        sudo apt install -y python3 > /install.log
+    if ! command -v python3 &> install.log; then
+        sudo apt update > install.log
+        sudo apt install -y python3 > install.log
     fi
-    if ! command -v pip3 &> /install.log; then
-        sudo apt install -y python3-pip > /install.log
+    if ! command -v pip3 &> install.log; then
+        sudo apt install -y python3-pip > install.log
     fi
-    if ! command -v openstack &> /install.log; then
-        sudo apt install -y python3-openstackclient > /install.log
+    if ! command -v openstack &> install.log; then
+        sudo apt install -y python3-openstackclient > install.log
     fi
-    if ! command -v ansible &> /install.log; then
-        sudo add-apt-repository --yes --update ppa:ansible/ansible > /install.log
-        sudo apt install -y ansible > /install.log
+    if ! command -v ansible &> install.log; then
+        sudo add-apt-repository --yes --update ppa:ansible/ansible > install.log
+        sudo apt install -y ansible > install.log
     fi
-    if ! dpkg-query -W -f='${Status}' software-properties-common 2>/install.log | grep -q "ok installed"; then
-        sudo apt install -y software-properties-common > /install.log
+    if ! dpkg-query -W -f='${Status}' software-properties-common 2>install.log | grep -q "ok installed"; then
+        sudo apt install -y software-properties-common > install.log
     fi
-    pip3 install python-openstackclient argparse subprocess32 python-openstacksdk > /install.log
+    pip3 install python-openstackclient argparse subprocess32 python-openstacksdk > install.log
 }
 
 # Function to set up permissions
@@ -47,17 +48,19 @@ setup_permissions() {
      source $OPENRC
      echo "sourced $OPENRC"
      python3 scripts/Deploy.py $OPENRC $TAG $SSH_KEY || exit 1
+     echo"executing next script"
      python3 scripts/gen_config.py $TAG $SSH_KEY || exit 1
+    echo"python script executed"
  }
-    
+
 function ssh_to_servers {
+    echo "Setting up SSH keys on servers..."
     local servers_file=$1
     local ssh_key=$2
     if [ ! -f "$servers_file" ]; then
         echo "File $servers_file not found!"
         exit 1
     fi
-
     # Read the file and store IP addresses in variables
     local count=1
     while IFS=: read -r host ip; do
@@ -75,22 +78,25 @@ function ssh_to_servers {
     # Perform SSH connections
     if [ -n "$host1" ]; then
         #echo "Connecting to Host1 at $host1"
-        ssh -i "$ssh_key" -t ubuntu@"$host1" "exit" &>install.log
+        ssh -i "$ssh_key" -t ubuntu@"$host1" "echo '$(cat $ssh_key)' > ~/.ssh/id_rsa && chmod 600 ~/.ssh/id_rsa && exit" #&>install.log
     fi
     if [ -n "$host2" ]; then
         #echo "Connecting to Host2 at $host2"
-        ssh -i "$ssh_key" -t ubuntu@"$host2" "exit" &>install.log
+        ssh -i "$ssh_key" -t ubuntu@"$host2" "echo '$(cat $ssh_key)' > ~/.ssh/id_rsa && chmod 600 ~/.ssh/id_rsa && exit" #&>install.log
     fi
     if [ -n "$host3" ]; then
         #echo "Connecting to Host3 at $host3"
-        ssh -i "$ssh_key" -t ubuntu@"$host3" "exit" &>install.log
+        ssh -i "$ssh_key" -t ubuntu@"$host3" "echo '$(cat $ssh_key)' > ~/.ssh/id_rsa && chmod 600 ~/.ssh/id_rsa && exit" #&>install.log
     fi
 
 }
-
 ansible_playbook() {    
     echo "Executing ansible-playbook.."
-    ansible all -m ping > /dev/null 2>&1
+    # Set the ANSIBLE_CONFIG environment variable
+    export ANSIBLE_CONFIG=ansible.cfg
+    echo "Ansible config set to $ANSIBLE_CONFIG"
+    echo "Checking ping to hosts..."
+    ansible all -m ping > install.log 2>&1
     if [ $? -eq 0 ]; then
         echo "Ping successful to hosts."    
         echo "Executing ansible-playbook.."
@@ -100,11 +106,10 @@ ansible_playbook() {
     fi
 }
 
-
 # Main script execution
 install_dependencies
 setup_permissions
-#invoke_python_script
+invoke_python_script
 ssh_to_servers $SERVERS_FIP $SSH_KEY
 ansible_playbook
 exit 1
