--- a/install
+++ b/install
@@ -14,27 +14,25 @@ install_dependencies() {
     touch install.log
     chmod 777 install.log
     echo "Checking and installing necessary dependencies..."
-    sudo apt update > install.log
-    sudo apt-get upgrade -y > install.log
     if ! command -v python3 &> install.log; then
-        sudo apt-get install -y python3 > install.log
+        sudo apt update -y > install.log
+        sudo apt install -y python3 > install.log
     fi
     if ! command -v pip3 &> install.log; then
-        sudo apt-get install -y python3-pip > install.log
+        sudo apt install -y python3-pip > install.log
     fi
     if ! command -v openstack &> install.log; then
-        sudo apt-get install -y python3-openstackclient > install.log
+        sudo apt install -y python3-openstackclient > install.log
     fi
     if ! command -v ansible &> install.log; then
         sudo add-apt-repository --yes --update ppa:ansible/ansible > install.log
-        sudo apt-get install -y ansible > install.log
+        sudo apt install -y ansible > install.log
     fi
     if ! dpkg-query -W -f='${Status}' software-properties-common 2>install.log | grep -q "ok installed"; then
-        sudo apt-get install -y software-properties-common > install.log
+        sudo apt install -y software-properties-common > install.log
     fi
     pip3 install python-openstackclient argparse subprocess32 python-openstacksdk > install.log
 }
-
 
 # Function to set up permissions
 setup_permissions() {
@@ -81,7 +79,6 @@ function ssh_to_servers {
         #echo "Connecting to Host1 at $host1"
         ssh -i "$ssh_key" -t ubuntu@"$host1" "echo '$(cat $ssh_key)' > ~/.ssh/id_rsa && chmod 600 ~/.ssh/id_rsa && exit" &>install.log
     fi
-    
     if [ -n "$host2" ]; then
         #echo "Connecting to Host2 at $host2"
         ssh -i "$ssh_key" -t ubuntu@"$host2" "echo '$(cat $ssh_key)' > ~/.ssh/id_rsa && chmod 600 ~/.ssh/id_rsa && exit" &>install.log
@@ -94,9 +91,9 @@ function ssh_to_servers {
 ansible_playbook() {    
     echo "Executing ansible-playbook.."
     # Set the ANSIBLE_CONFIG environment variable
-    export ANSIBLE_CONFIG=ansible.cfg
+    #export ANSIBLE_CONFIG=ansible.cfg
     echo "Ansible config set to $ANSIBLE_CONFIG"
-    sleep 40
+    sleep 20
     ansible all -m ping -i hosts || exit 1
     if [ $? -eq 0 ]; then
         echo "Ping successful to hosts."    
