--- a/install
+++ b/install
@@ -4,7 +4,6 @@ if [ "$#" -ne 3 ]; then
     echo "Usage: $0 <openrc> <tag> <ssh_key>"
     exit 1
 fi
-
 OPENRC=$1
 TAG=$2
 SSH_KEY=$3
@@ -14,35 +13,27 @@ SERVERS_FIP="servers_fip"
 install_dependencies() {
     touch install.log
     chmod 777 install.log
-    echo "Checking and installing necessary dependencies..." | tee -a install.log
+    echo "Checking and installing necessary dependencies..."
+    sudo apt-get upgrade -y > install.log
     if ! command -v python3 &> install.log; then
-        sudo apt update -y >> install.log
-        sudo apt install -y python3 >> install.log
+        sudo apt-get install -y python3 > install.log
     fi
     if ! command -v pip3 &> install.log; then
-        sudo apt install -y python3-pip >> install.log
+        sudo apt-get install -y python3-pip > install.log
     fi
     if ! command -v openstack &> install.log; then
-        sudo apt install -y python3-openstackclient >> install.log
+        sudo apt-get install -y python3-openstackclient > install.log
     fi
-    pip3 install --upgrade pip >> install.log
-    if ! pip3 show openstacksdk &>/install.log; then
-        pip3 install openstacksdk==3.1.0 >> install.log 
-    fi
-    if ! pip3 show argparse &>/install.log; then
-        pip3 install argparse >> install.log
-    fi   
-    if ! pip3 show subprocess32 &>/install.log; then
-        pip3 install subprocess32 >> install.log
-    fi
-
     if ! command -v ansible &> install.log; then
-        sudo apt update -y >> install.log
-        sudo apt install -y software-properties-common >> install.log
-        sudo apt-add-repository --yes --update ppa:ansible/ansible >> install.log
-        sudo apt install -y ansible >> install.log
+        sudo add-apt-repository --yes --update ppa:ansible/ansible > install.log
+        sudo apt-get install -y ansible > install.log
     fi
+    if ! dpkg-query -W -f='${Status}' software-properties-common 2>install.log | grep -q "ok installed"; then
+        sudo apt-get install -y software-properties-common > install.log
+    fi
+    pip3 install python-openstackclient argparse subprocess32 python-openstacksdk > install.log
 }
+
 
 # Function to set up permissions
 setup_permissions() {
@@ -64,7 +55,6 @@ setup_permissions() {
  }
 
 function ssh_to_servers {
-    echo "Setting up SSH keys on servers..."
     local servers_file=$1
     local ssh_key=$2
     if [ ! -f "$servers_file" ]; then
@@ -88,25 +78,23 @@ function ssh_to_servers {
     # Perform SSH connections
     if [ -n "$host1" ]; then
         #echo "Connecting to Host1 at $host1"
-        ssh -i "$ssh_key" -o StrictHostKeyChecking=no -t ubuntu@"$host1" "echo '$(cat $ssh_key)' > ~/.ssh/id_rsa && chmod 600 ~/.ssh/id_rsa && exit" &>install.log
+        ssh -i "$ssh_key" -t ubuntu@"$host1" "echo '$(cat $ssh_key)' > ~/.ssh/id_rsa && chmod 600 ~/.ssh/id_rsa && exit" &>install.log
     fi
     if [ -n "$host2" ]; then
         #echo "Connecting to Host2 at $host2"
-        ssh -i "$ssh_key" -o StrictHostKeyChecking=no -t ubuntu@"$host2" "echo '$(cat $ssh_key)' > ~/.ssh/id_rsa && chmod 600 ~/.ssh/id_rsa && exit" &>install.log
+        ssh -i "$ssh_key" -t ubuntu@"$host2" "echo '$(cat $ssh_key)' > ~/.ssh/id_rsa && chmod 600 ~/.ssh/id_rsa && exit" &>install.log
     fi
     if [ -n "$host3" ]; then
         #echo "Connecting to Host3 at $host3"
-        ssh -i "$ssh_key" -o StrictHostKeyChecking=no -t ubuntu@"$host3" "echo '$(cat $ssh_key)' > ~/.ssh/id_rsa && chmod 600 ~/.ssh/id_rsa && exit" &>install.log
+        ssh -i "$ssh_key" -t ubuntu@"$host3" "echo '$(cat $ssh_key)' > ~/.ssh/id_rsa && chmod 600 ~/.ssh/id_rsa && exit" &>install.log
     fi
 }
-
 ansible_playbook() {    
     echo "Executing ansible-playbook.."
     # Set the ANSIBLE_CONFIG environment variable
-    export ANSIBLE_CONFIG=ansible.cfg
-    echo "Ansible config set to $ANSIBLE_CONFIG"
+    #export ANSIBLE_CONFIG=ansible.cfg
+    #echo "Ansible config set to $ANSIBLE_CONFIG"
     sleep 40
-    echo "Checking ping to hosts..."
     ansible all -m ping -i hosts || exit 1
     if [ $? -eq 0 ]; then
         echo "Ping successful to hosts."    
